2.1.0/_sources/gallery/text_labels_and_annotations/fancyarrow_demo.rst.txt


.. _sphx_glr_gallery_text_labels_and_annotations_fancyarrow_demo.py:


===============
Fancyarrow Demo
===============





.. image:: /gallery/text_labels_and_annotations/images/sphx_glr_fancyarrow_demo_001.png
    :align: center





.. code-block:: python

    import matplotlib.patches as mpatches
    import matplotlib.pyplot as plt

    styles = mpatches.ArrowStyle.get_styles()

    ncol = 2
    nrow = (len(styles) + 1) // ncol
    figheight = (nrow + 0.5)
    fig1 = plt.figure(1, (4 * ncol / 1.5, figheight / 1.5))
    fontsize = 0.2 * 70


    ax = fig1.add_axes([0, 0, 1, 1], frameon=False, aspect=1.)

    ax.set_xlim(0, 4 * ncol)
    ax.set_ylim(0, figheight)


    def to_texstring(s):
        s = s.replace("<", r"$<$")
        s = s.replace(">", r"$>$")
        s = s.replace("|", r"$|$")
        return s


    for i, (stylename, styleclass) in enumerate(sorted(styles.items())):
        x = 3.2 + (i // nrow) * 4
        y = (figheight - 0.7 - i % nrow)  # /figheight
        p = mpatches.Circle((x, y), 0.2)
        ax.add_patch(p)

        ax.annotate(to_texstring(stylename), (x, y),
                    (x - 1.2, y),
                    ha="right", va="center",
                    size=fontsize,
                    arrowprops=dict(arrowstyle=stylename,
                                    patchB=p,
                                    shrinkA=5,
                                    shrinkB=5,
                                    fc="k", ec="k",
                                    connectionstyle="arc3,rad=-0.05",
                                    ),
                    bbox=dict(boxstyle="square", fc="w"))

    ax.xaxis.set_visible(False)
    ax.yaxis.set_visible(False)


    plt.draw()
    plt.show()

**Total running time of the script:** ( 0 minutes  0.106 seconds)



.. only :: html

 .. container:: sphx-glr-footer


  .. container:: sphx-glr-download

     :download:`Download Python source code: fancyarrow_demo.py <fancyarrow_demo.py>`



  .. container:: sphx-glr-download

     :download:`Download Jupyter notebook: fancyarrow_demo.ipynb <fancyarrow_demo.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.readthedocs.io>`_
